# Setup configuration

[metadata]
name = ebel
version = 1.0.25
description = e(BE:L) - validation and extension of BEL networks
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs
url = https://github.com/e-bel/ebel

project_urls =
    Issue Tracker = https://github.com/e-bel/ebel/issues
    Documentation = https://ebel.readthedocs.io/en/latest/
    Source Code = https://github.com/e-bel/ebel

# Author information
author = "Christian Ebeling, Bruce Schultz"
author_email = christian.ebeling@scai.fraunhofer.de
maintainer = Christian Ebeling
maintainer_email = christian.ebeling@scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Biological Expression Language
    Graph Database
    Biomedical Database

[options]
install_requires =
    lark-parser==0.11.2
    click>=7.1.2
    requests>=2.25.1
    tqdm>=4.59.0
    pandas>=1.2.4
    sqlalchemy==1.4.46
    SQLAlchemy-Utils==0.37.7
    xlwt==1.3.0
    xlrd==2.0.1
    xlsxwriter==1.3.8
    pymysql==1.0.2
    xmltodict==0.12.0
    GitPython==3.1.14
    lxml>=4.6.5
    flask==2.0.1
    flask_cors==3.0.10
    connexion[swagger-ui]==2.14.1
    cryptography==3.4.7
    openpyxl==3.0.7
    graphviz
    pyorientdb
    neo4j

# Random options
zip_safe = false
python_requires = >=3.7
include_package_data = True

# Where is my code
packages = find:

[options.packages.find]
include =
    ebel
    ebel.*

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    ebel = ebel.cli:main

########################
# Flake8 Configuration #
########################
[flake8]
# D105: Missing docstring in magic method
# E127: continuation line over-indented for visual indent
# E128: continuation line under-indented for visual indent
# E501: line too long
# E722: do not use bare "except"
# W503: line break before binary operator
# W504: line break after binary operator
# N813: imported as lowercase 'et'
# W605: invalid escape sequence '\s'
# F401: imported but unused
# D401: First line should be in imperative mood
# C901: Function is too complex - https://www.flake8rules.com/rules/C901.html

ignore = D105,E722,W503,F401,D401,C901
exclude =
    .git,
    __pycache__
    ebel/web/api/scaiview/*
    ebel/manager/orientdb/biodbs/stitch.py
max-line-length = 119
per-file-ignores =
    ebel/manager/orientdb/odb_ss_functions.py:E127,E128,N813,W503,W504,W605,E501,W191,E101
    ebel/__init__.py:F401


##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = ebel
omit =
    ebel/__main__.py
    ebel/cli.py
    tests/*
    docs/*

[coverage:paths]
source =
    ebel
    .tox/*/lib/python*/site-packages/ebel

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
